@@ -12,31 +12,33 @@ public class HabrCareerParse implements Parse {
     private static final String SOURCE_LINK = "https://career.habr.com";
     private static final String PREFIX = "/vacancies?page=";
     private static final String SUFFIX = "&q=Java%20developer&type=all";
+    private static final int PAGE_NUMBER = 5;
 
     @Override
     public List<Post> fetch() {
         var result = new ArrayList<Post>();
-        try {
-            int pageNumber = 1;
-            String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, pageNumber, SUFFIX);
-            var connection = Jsoup.connect(fullLink);
-            var document = connection.get();
-            var rows = document.select(".vacancy-card__inner");
-            rows.forEach(row -> {
-                var dataElement =  row.select(".basic-date").first();
-                String date = dataElement.attr("datetime");
-                var titleElement = row.select(".vacancy-card__title").first();
-                var linkElement = titleElement.child(0);
-                String vacancyName = titleElement.text();
-                String link = String.format("%s%s", SOURCE_LINK,
-                        linkElement.attr("href"));
-                var post = new Post();
-                post.setTitle(vacancyName);
-                post.setLink(link);
-                result.add(post);
-            });
-        } catch (IOException e) {
-            LOG.error("When load page", e);
+        for (int index = 1; index <= PAGE_NUMBER; index++) {
+            try {
+                String fullLink = "%s%s%d%s".formatted(SOURCE_LINK, PREFIX, index, SUFFIX);
+                var connection = Jsoup.connect(fullLink);
+                var document = connection.get();
+                var rows = document.select(".vacancy-card__inner");
+                rows.forEach(row -> {
+                    var dataElement = row.select(".basic-date").first();
+                    String date = dataElement.attr("datetime");
+                    var titleElement = row.select(".vacancy-card__title").first();
+                    var linkElement = titleElement.child(0);
+                    String vacancyName = titleElement.text();
+                    String link = String.format("%s%s", SOURCE_LINK,
+                            linkElement.attr("href"));
+                    var post = new Post();
+                    post.setTitle(vacancyName);
+                    post.setLink(link);
+                    result.add(post);
+                });
+            } catch (IOException e) {
+                LOG.error("When load page", e);
+            }
         }
         return result;
     }
